--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-- name: First interaction
+ name: First interaction
   uses: actions/first-interaction@v1.2.0
   with:
     # Token for the repository. Can be passed in using {{ secrets.GITHUB_TOKEN }}
