--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Jupyter
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    -cron: '0 */3 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,15 +18,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      -id: repo
+        name: Repo Checkout
+        uses: actions/checkout@v3
+      
+      -id: Python
+       name: Python Setup & Packages Installation
+       uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip' # caching pip dependencies
+      - run: pip install -r requirements.txt
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      -id: jupyter
+      name: Jupyter Notebook execution  
+      run: jupyter execute text.ipynb
+      shell: bash
