--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Jupyter
-
-# Controls when the workflow will run
-on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-  schedule:
-    - cron: '0 */3 * * *'
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# Steps represent a sequence of tasks that will be executed as part of the job
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-     - id: repo
-     name: Repo Checkout
-     uses: actions/checkout@v3
-      
-    - id: python
-    name: Python Setup & Packages Installation
-    uses: actions/setup-python@v4
-    with:
-      python-version: '3.9'
-      cache: 'pip' # caching pip dependencies
-    - run: pip install -r requirements.txt
+      - name: Repo Checkout
+        id: repo
+        uses: actions/checkout@v3
 
-    - id: jupyter
-     name: Jupyter Notebook execution  
-     run: jupyter execute text.ipynb
-      shell: bash
+      - name: Python Setup & Packages Installation
+        id: python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip' # caching pip dependencies
+
+      - name: Install Python Requirements
+        run: |
+          pip install -r requirements.txt
+
+      - name: Jupyter Notebook execution
+        id: jupyter
+        run: jupyter execute text.ipynb
+        shell: bash
