--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,24 +1,56 @@
-# Steps represent a sequence of tasks that will be executed as part of the job
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Repo Checkout
-        id: repo
-        uses: actions/checkout@v3
+# This is a basic workflow to help you get started with Actions
 
-      - name: Python Setup & Packages Installation
-        id: python
-        uses: actions/setup-python@v4
+name: Jupyter
+
+# Controls when the workflow will run
+on:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */24 * * *'
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - id: repo 
+        name: Repo Checkout
+        uses: actions/checkout@v2
+
+      - id: python
+        name: Python Setup & Packages Installation
+        uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-          cache: 'pip' # caching pip dependencies
+          cache: 'pip'
+      - run: pip install -r requirements.txt
 
-      - name: Install Python Requirements
-        run: |
-          pip install -r requirements.txt
+      - id: jupyter 
+        name: Jupyter Notebook Execution
+        run: jupyter execute download.ipynb
+        shell: bash 
 
-      - name: Jupyter Notebook execution
-        id: jupyter
-        run: jupyter execute text.ipynb
-        shell: bash
+ # Add new files in folder, commit along with other modified files, push
+      - id: commit
+        name: Commit files
+        run:
+          git config --local user.name actions-user
+
+          git config --local user.email "actions@github.com"
+
+          git add *
+
+          git commit -am "GH ACTION Headlines $(date)"
+
+          git push origin main
+
+        env:
+          REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+
+          username: github-actions
