--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
 
       - id: python
         name: Python Setup & Packages Installation
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
           cache: 'pip'
@@ -33,7 +33,7 @@ jobs:
 
       - id: jupyter 
         name: Jupyter Notebook Execution
-        run: jupyter execute download.ipynb
+        run: jupyter execute test.ipynb
         shell: bash 
 
  # Add new files in folder, commit along with other modified files, push
