add remote branch

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,8 @@ jobs:
 
                 git config --local user.email "actions@github.com"
 
+                git remote add origin https://github.com/zd341/github_actions_repo.git
+
                 git add *
 
                 git commit -am "GH ACTION Headlines ${date}"
