--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,6 @@ jobs:
 
                 git config --local user.email "actions@github.com"
 
-                git remote add origin https://github.com/zd341/github_actions_repo.git
-
                 git add *
 
                 git commit -am "GH ACTION Headlines ${date}"
@@ -44,5 +42,5 @@ jobs:
               env:
                 REPO_KEY: ${{secrets.GITHUB_TOKEN}}
 
-                username: github-actions
+                username: actions-user
 
